--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "deployMain": "gh-pages -b master -d build"
+
   },
   "eslintConfig": {
     "extends": [
