--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "sass": "^1.43.2",
     "sass-loader": "^12.2.0",
     "web-vitals": "^1.1.2"
@@ -22,7 +22,6 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "deployMain": "gh-pages -b master -d build"
-
   },
   "eslintConfig": {
     "extends": [
@@ -43,6 +42,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.2.3"
+    "gh-pages": "^6.2.0"
   }
 }
