--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://pongpwner.github.io/",
+  "homepage": "http://pongpwner.github.io/eric-shyu-portfolio",
   "name": "eric-shyu-portfolio",
   "version": "0.1.0",
   "private": true,
